// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CamelComponentSchemaService getSchema should build the appropriate schema for entities 1`] = `
{
  "$ref": "#/items/definitions/org.apache.camel.dsl.yaml.deserializers.OutputAwareFromDefinition",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "description": {
      "$comment": "group:common",
      "description": "Sets the description of this node",
      "title": "Description",
      "type": "string",
    },
    "id": {
      "$comment": "group:common",
      "description": "Sets the id of this node",
      "title": "Id",
      "type": "string",
    },
    "parameters": {
      "description": "The key-value pairs of the properties to configure this endpoint",
      "title": "Endpoint Properties",
      "type": "object",
    },
    "uri": {
      "$comment": "group:common",
      "description": "Sets the URI of the endpoint to use",
      "title": "Uri",
      "type": "string",
    },
    "variableReceive": {
      "$comment": "group:common",
      "description": "To use a variable to store a copy of the received message body (only body, not headers). This is handy for easy access to the received message body via variables.",
      "title": "Variable Receive",
      "type": "string",
    },
  },
  "required": [
    "steps",
    "uri",
  ],
  "type": "object",
}
`;

exports[`CamelComponentSchemaService getSchema should build the appropriate schema for kamelets 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "Sends the message to a static endpoint",
  "properties": {
    "description": {
      "$comment": "group:common",
      "description": "Sets the description of this node",
      "title": "Description",
      "type": "string",
    },
    "disabled": {
      "$comment": "group:advanced",
      "default": false,
      "description": "Disables this EIP from the route.",
      "title": "Disabled",
      "type": "boolean",
    },
    "id": {
      "$comment": "group:common",
      "description": "Sets the id of this node",
      "title": "Id",
      "type": "string",
    },
    "note": {
      "$comment": "group:common",
      "description": "Sets the note of this node",
      "title": "Note",
      "type": "string",
    },
    "parameters": {
      "description": "The key-value pairs of the properties to configure this endpoint",
      "properties": {
        "bootstrapServers": {
          "description": "Comma separated list of Kafka Broker URLs",
          "title": "Bootstrap Servers",
          "type": "string",
        },
        "topic": {
          "description": "Comma separated list of Kafka topic names",
          "title": "Topic Names",
          "type": "string",
        },
      },
      "required": [
        "topic",
        "bootstrapServers",
      ],
      "title": "Endpoint Properties",
      "type": "object",
      "x-component-name": "kamelet:kafka-not-secured-sink",
    },
    "pattern": {
      "$comment": "group:advanced",
      "description": "Sets the optional ExchangePattern used to invoke this endpoint",
      "enum": [
        "InOnly",
        "InOut",
      ],
      "title": "Pattern",
      "type": "string",
    },
    "uri": {
      "$comment": "group:common",
      "description": "Sets the uri of the endpoint to send to.",
      "title": "Uri",
      "type": "string",
    },
    "variableReceive": {
      "$comment": "group:common",
      "description": "To use a variable to store the received message body (only body, not headers). This makes it handy to use variables for user data and to easily control what data to use for sending and receiving. Important: When using receive variable then the received body is stored only in this variable and not on the current message.",
      "title": "Variable Receive",
      "type": "string",
    },
    "variableSend": {
      "$comment": "group:common",
      "description": "To use a variable as the source for the message body to send. This makes it handy to use variables for user data and to easily control what data to use for sending and receiving. Important: When using send variable then the message body is taken from this variable instead of the current message, however the headers from the message will still be used as well. In other words, the variable is used instead of the message body, but everything else is as usual.",
      "title": "Variable Send",
      "type": "string",
    },
  },
  "required": [
    "uri",
  ],
  "title": "To",
  "type": "object",
}
`;

exports[`CamelComponentSchemaService getSchema should build the appropriate schema for processors combined that holds a component 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "Sends the message to a static endpoint",
  "properties": {
    "description": {
      "$comment": "group:common",
      "description": "Sets the description of this node",
      "title": "Description",
      "type": "string",
    },
    "disabled": {
      "$comment": "group:advanced",
      "default": false,
      "description": "Disables this EIP from the route.",
      "title": "Disabled",
      "type": "boolean",
    },
    "id": {
      "$comment": "group:common",
      "description": "Sets the id of this node",
      "title": "Id",
      "type": "string",
    },
    "note": {
      "$comment": "group:common",
      "description": "Sets the note of this node",
      "title": "Note",
      "type": "string",
    },
    "parameters": {
      "description": "The key-value pairs of the properties to configure this endpoint",
      "properties": {
        "exchangeFormatter": {
          "$comment": "group:advanced",
          "description": "To use a custom exchange formatter",
          "format": "bean:org.apache.camel.spi.ExchangeFormatter",
          "title": "Exchange Formatter",
          "type": "string",
        },
        "groupActiveOnly": {
          "$comment": "group:producer",
          "default": true,
          "description": "If true, will hide stats when no new messages have been received for a time interval, if false, show stats regardless of message traffic.",
          "title": "Group Active Only",
          "type": "boolean",
        },
        "groupDelay": {
          "$comment": "group:producer",
          "description": "Set the initial delay for stats (in millis)",
          "title": "Group Delay",
          "type": "integer",
        },
        "groupInterval": {
          "$comment": "group:producer",
          "description": "If specified will group message stats by this time interval (in millis)",
          "title": "Group Interval",
          "type": "integer",
        },
        "groupSize": {
          "$comment": "group:producer",
          "description": "An integer that specifies a group size for throughput logging.",
          "title": "Group Size",
          "type": "integer",
        },
        "lazyStartProducer": {
          "$comment": "group:producer (advanced)",
          "default": false,
          "description": "Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel's routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing.",
          "title": "Lazy Start Producer",
          "type": "boolean",
        },
        "level": {
          "$comment": "group:producer",
          "default": "INFO",
          "description": "Logging level to use. The default value is INFO.",
          "enum": [
            "TRACE",
            "DEBUG",
            "INFO",
            "WARN",
            "ERROR",
            "OFF",
          ],
          "title": "Level",
          "type": "enum",
        },
        "logMask": {
          "$comment": "group:producer",
          "default": false,
          "description": "If true, mask sensitive information like password or passphrase in the log.",
          "title": "Log Mask",
          "type": "boolean",
        },
        "loggerName": {
          "$comment": "group:producer",
          "description": "Name of the logging category to use",
          "title": "Logger Name",
          "type": "string",
        },
        "marker": {
          "$comment": "group:producer",
          "description": "An optional Marker name to use.",
          "title": "Marker",
          "type": "string",
        },
        "maxChars": {
          "$comment": "group:formatting",
          "default": 10000,
          "description": "Limits the number of characters logged per line.",
          "title": "Max Chars",
          "type": "integer",
        },
        "multiline": {
          "$comment": "group:formatting",
          "default": false,
          "description": "If enabled then each information is outputted on a newline.",
          "title": "Multiline",
          "type": "boolean",
        },
        "plain": {
          "$comment": "group:producer",
          "default": false,
          "description": "If enabled only the body will be printed out",
          "title": "Plain",
          "type": "boolean",
        },
        "showAll": {
          "$comment": "group:formatting",
          "default": false,
          "description": "Quick option for turning all options on. (multiline, maxChars has to be manually set if to be used)",
          "title": "Show All",
          "type": "boolean",
        },
        "showAllProperties": {
          "$comment": "group:formatting",
          "default": false,
          "description": "Show all of the exchange properties (both internal and custom).",
          "title": "Show All Properties",
          "type": "boolean",
        },
        "showBody": {
          "$comment": "group:formatting",
          "default": true,
          "description": "Show the message body.",
          "title": "Show Body",
          "type": "boolean",
        },
        "showBodyType": {
          "$comment": "group:formatting",
          "default": true,
          "description": "Show the body Java type.",
          "title": "Show Body Type",
          "type": "boolean",
        },
        "showCachedStreams": {
          "$comment": "group:formatting",
          "default": true,
          "description": "Whether Camel should show cached stream bodies or not (org.apache.camel.StreamCache).",
          "title": "Show Cached Streams",
          "type": "boolean",
        },
        "showCaughtException": {
          "$comment": "group:formatting",
          "default": false,
          "description": "If the exchange has a caught exception, show the exception message (no stack trace). A caught exception is stored as a property on the exchange (using the key org.apache.camel.Exchange#EXCEPTION_CAUGHT) and for instance a doCatch can catch exceptions.",
          "title": "Show Caught Exception",
          "type": "boolean",
        },
        "showException": {
          "$comment": "group:formatting",
          "default": false,
          "description": "If the exchange has an exception, show the exception message (no stacktrace)",
          "title": "Show Exception",
          "type": "boolean",
        },
        "showExchangeId": {
          "$comment": "group:formatting",
          "default": false,
          "description": "Show the unique exchange ID.",
          "title": "Show Exchange Id",
          "type": "boolean",
        },
        "showExchangePattern": {
          "$comment": "group:formatting",
          "default": false,
          "description": "Shows the Message Exchange Pattern (or MEP for short).",
          "title": "Show Exchange Pattern",
          "type": "boolean",
        },
        "showFiles": {
          "$comment": "group:formatting",
          "default": false,
          "description": "If enabled Camel will output files",
          "title": "Show Files",
          "type": "boolean",
        },
        "showFuture": {
          "$comment": "group:formatting",
          "default": false,
          "description": "If enabled Camel will on Future objects wait for it to complete to obtain the payload to be logged.",
          "title": "Show Future",
          "type": "boolean",
        },
        "showHeaders": {
          "$comment": "group:formatting",
          "default": false,
          "description": "Show the message headers.",
          "title": "Show Headers",
          "type": "boolean",
        },
        "showProperties": {
          "$comment": "group:formatting",
          "default": false,
          "description": "Show the exchange properties (only custom). Use showAllProperties to show both internal and custom properties.",
          "title": "Show Properties",
          "type": "boolean",
        },
        "showRouteGroup": {
          "$comment": "group:formatting",
          "default": false,
          "description": "Show route Group.",
          "title": "Show Route Group",
          "type": "boolean",
        },
        "showRouteId": {
          "$comment": "group:formatting",
          "default": false,
          "description": "Show route ID.",
          "title": "Show Route Id",
          "type": "boolean",
        },
        "showStackTrace": {
          "$comment": "group:formatting",
          "default": false,
          "description": "Show the stack trace, if an exchange has an exception. Only effective if one of showAll, showException or showCaughtException are enabled.",
          "title": "Show Stack Trace",
          "type": "boolean",
        },
        "showStreams": {
          "$comment": "group:formatting",
          "default": false,
          "description": "Whether Camel should show stream bodies or not (eg such as java.io.InputStream). Beware if you enable this option then you may not be able later to access the message body as the stream have already been read by this logger. To remedy this you will have to use Stream Caching.",
          "title": "Show Streams",
          "type": "boolean",
        },
        "showVariables": {
          "$comment": "group:formatting",
          "default": false,
          "description": "Show the variables.",
          "title": "Show Variables",
          "type": "boolean",
        },
        "skipBodyLineSeparator": {
          "$comment": "group:formatting",
          "default": true,
          "description": "Whether to skip line separators when logging the message body. This allows to log the message body in one line, setting this option to false will preserve any line separators from the body, which then will log the body as is.",
          "title": "Skip Body Line Separator",
          "type": "boolean",
        },
        "sourceLocationLoggerName": {
          "$comment": "group:producer",
          "default": false,
          "description": "If enabled then the source location of where the log endpoint is used in Camel routes, would be used as logger name, instead of the given name. However, if the source location is disabled or not possible to resolve then the existing logger name will be used.",
          "title": "Source Location Logger Name",
          "type": "boolean",
        },
        "style": {
          "$comment": "group:formatting",
          "default": "Default",
          "description": "Sets the outputs style to use.",
          "enum": [
            "Default",
            "Tab",
            "Fixed",
          ],
          "title": "Style",
          "type": "enum",
        },
      },
      "required": [
        "loggerName",
      ],
      "title": "Endpoint Properties",
      "type": "object",
      "x-component-name": "log",
    },
    "pattern": {
      "$comment": "group:advanced",
      "description": "Sets the optional ExchangePattern used to invoke this endpoint",
      "enum": [
        "InOnly",
        "InOut",
      ],
      "title": "Pattern",
      "type": "string",
    },
    "uri": {
      "$comment": "group:common",
      "description": "Sets the uri of the endpoint to send to.",
      "title": "Uri",
      "type": "string",
    },
    "variableReceive": {
      "$comment": "group:common",
      "description": "To use a variable to store the received message body (only body, not headers). This makes it handy to use variables for user data and to easily control what data to use for sending and receiving. Important: When using receive variable then the received body is stored only in this variable and not on the current message.",
      "title": "Variable Receive",
      "type": "string",
    },
    "variableSend": {
      "$comment": "group:common",
      "description": "To use a variable as the source for the message body to send. This makes it handy to use variables for user data and to easily control what data to use for sending and receiving. Important: When using send variable then the message body is taken from this variable instead of the current message, however the headers from the message will still be used as well. In other words, the variable is used instead of the message body, but everything else is as usual.",
      "title": "Variable Send",
      "type": "string",
    },
  },
  "required": [
    "uri",
  ],
  "title": "To",
  "type": "object",
}
`;

exports[`CamelComponentSchemaService getSchema should build the appropriate schema for producer/consumer components 1`] = `
[
  "directoryName",
  "charset",
  "doneFileName",
  "fileName",
  "delete",
  "moveFailed",
  "noop",
  "preMove",
  "preSort",
  "recursive",
  "sendEmptyMessageWhenIdle",
  "bridgeErrorHandler",
  "directoryMustExist",
  "exceptionHandler",
  "exchangePattern",
  "extendedAttributes",
  "includeHiddenDirs",
  "includeHiddenFiles",
  "inProgressRepository",
  "localWorkDirectory",
  "onCompletionExceptionHandler",
  "pollStrategy",
  "probeContentType",
  "processStrategy",
  "startingDirectoryMustExist",
  "startingDirectoryMustHaveAccess",
  "autoCreate",
  "autoCreateStepwise",
  "browseLimit",
  "bufferSize",
  "copyAndDeleteOnRenameFail",
  "renameUsingCopy",
  "synchronous",
  "antExclude",
  "antFilterCaseSensitive",
  "antInclude",
  "eagerMaxMessagesPerPoll",
  "exclude",
  "excludeExt",
  "filter",
  "filterDirectory",
  "filterFile",
  "idempotent",
  "idempotentEager",
  "idempotentKey",
  "idempotentRepository",
  "include",
  "includeExt",
  "maxDepth",
  "maxMessagesPerPoll",
  "minDepth",
  "move",
  "exclusiveReadLockStrategy",
  "readLock",
  "readLockCheckInterval",
  "readLockDeleteOrphanLockFiles",
  "readLockIdempotentReleaseAsync",
  "readLockIdempotentReleaseAsyncPoolSize",
  "readLockIdempotentReleaseDelay",
  "readLockIdempotentReleaseExecutorService",
  "readLockLoggingLevel",
  "readLockMarkerFile",
  "readLockMinAge",
  "readLockMinLength",
  "readLockRemoveOnCommit",
  "readLockRemoveOnRollback",
  "readLockTimeout",
  "backoffErrorThreshold",
  "backoffIdleThreshold",
  "backoffMultiplier",
  "delay",
  "greedy",
  "initialDelay",
  "repeatCount",
  "runLoggingLevel",
  "scheduledExecutorService",
  "scheduler",
  "schedulerProperties",
  "startScheduler",
  "timeUnit",
  "useFixedDelay",
  "shuffle",
  "sortBy",
  "sorter",
]
`;

exports[`CamelComponentSchemaService getSchema should build the appropriate schema for producer/consumer components 2`] = `
[
  "directoryName",
  "charset",
  "doneFileName",
  "fileName",
  "appendChars",
  "checksumFileAlgorithm",
  "fileExist",
  "flatten",
  "jailStartingDirectory",
  "moveExisting",
  "tempFileName",
  "tempPrefix",
  "allowNullBody",
  "chmod",
  "chmodDirectory",
  "eagerDeleteTargetFile",
  "forceWrites",
  "keepLastModified",
  "lazyStartProducer",
  "moveExistingFileStrategy",
  "autoCreate",
  "autoCreateStepwise",
  "browseLimit",
  "bufferSize",
  "copyAndDeleteOnRenameFail",
  "renameUsingCopy",
  "synchronous",
  "antExclude",
  "antFilterCaseSensitive",
  "antInclude",
  "eagerMaxMessagesPerPoll",
  "exclude",
  "excludeExt",
  "filter",
  "filterDirectory",
  "filterFile",
  "idempotent",
  "idempotentEager",
  "idempotentKey",
  "idempotentRepository",
  "include",
  "includeExt",
  "maxDepth",
  "maxMessagesPerPoll",
  "minDepth",
  "move",
  "exclusiveReadLockStrategy",
  "readLock",
  "readLockCheckInterval",
  "readLockDeleteOrphanLockFiles",
  "readLockIdempotentReleaseAsync",
  "readLockIdempotentReleaseAsyncPoolSize",
  "readLockIdempotentReleaseDelay",
  "readLockIdempotentReleaseExecutorService",
  "readLockLoggingLevel",
  "readLockMarkerFile",
  "readLockMinAge",
  "readLockMinLength",
  "readLockRemoveOnCommit",
  "readLockRemoveOnRollback",
  "readLockTimeout",
  "backoffErrorThreshold",
  "backoffIdleThreshold",
  "backoffMultiplier",
  "delay",
  "greedy",
  "initialDelay",
  "repeatCount",
  "runLoggingLevel",
  "scheduledExecutorService",
  "scheduler",
  "schedulerProperties",
  "startScheduler",
  "timeUnit",
  "useFixedDelay",
  "shuffle",
  "sortBy",
  "sorter",
]
`;

exports[`CamelComponentSchemaService getSchema should build the appropriate schema for standalone processors 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "Used for printing custom messages to the logger.",
  "properties": {
    "description": {
      "$comment": "group:common",
      "description": "Sets the description of this node",
      "title": "Description",
      "type": "string",
    },
    "disabled": {
      "$comment": "group:advanced",
      "default": false,
      "description": "Disables this EIP from the route.",
      "title": "Disabled",
      "type": "boolean",
    },
    "id": {
      "$comment": "group:common",
      "description": "Sets the id of this node",
      "title": "Id",
      "type": "string",
    },
    "logLanguage": {
      "$comment": "group:advanced",
      "description": "To configure the language to use. By default, the simple language is used. However, Camel also supports other languages such as groovy.",
      "title": "Log Language",
      "type": "string",
    },
    "logName": {
      "$comment": "group:common",
      "description": "Sets the name of the logger. The name is default the routeId or the source:line if source location is enabled. You can also specify the name using tokens: \${class} - the logger class name (org.apache.camel.processor.LogProcessor) \${contextId} - the camel context id \${routeId} - the route id \${groupId} - the route group id \${nodeId} - the node id \${nodePrefixId} - the node prefix id \${source} - the source:line (source location must be enabled) \${source.name} - the source filename (source location must be enabled) \${source.line} - the source line number (source location must be enabled) For example to use the route and node id you can specify the name as: \${routeId}/\${nodeId}",
      "title": "Log Name",
      "type": "string",
    },
    "logger": {
      "$comment": "group:advanced",
      "description": "To refer to a custom logger instance to lookup from the registry.",
      "format": "bean:org.slf4j.Logger",
      "title": "Logger",
      "type": "string",
    },
    "loggingLevel": {
      "$comment": "group:common",
      "default": "INFO",
      "description": "Sets the logging level. The default value is INFO",
      "enum": [
        "TRACE",
        "DEBUG",
        "INFO",
        "WARN",
        "ERROR",
        "OFF",
      ],
      "title": "Logging Level",
      "type": "string",
    },
    "marker": {
      "$comment": "group:advanced",
      "description": "To use slf4j marker",
      "title": "Marker",
      "type": "string",
    },
    "message": {
      "$comment": "group:common",
      "description": "Sets the log message (uses simple language)",
      "title": "Message",
      "type": "string",
    },
    "note": {
      "$comment": "group:common",
      "description": "Sets the note of this node",
      "title": "Note",
      "type": "string",
    },
  },
  "required": [
    "message",
  ],
  "title": "Logger",
  "type": "object",
}
`;
